# structured-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: basic_usage.py  e2e_benchmark_suite.py  e2e_confidence_extraction.py  e2e_evaluation.py  e2e_image_extraction.py  e2e_image_extraction_performance.py  e2e_performance_metrics.py  e2e_templates.py  e2e_text_extraction.py  generate_test_images.py
examples/assets/: ground_truth.json
src/structured_extractor/: __init__.py
src/structured_extractor/core/: __init__.py  config.py  exceptions.py  extractor.py  templates.py
src/structured_extractor/evaluation/: __init__.py  comparators.py  evaluator.py  reporters.py  types.py
src/structured_extractor/prompts/: __init__.py  builder.py
src/structured_extractor/results/: __init__.py  confidence.py  types.py
src/structured_extractor/schemas/: __init__.py  contract.py  invoice.py  receipt.py  resume.py
src/structured_extractor/templates/: __init__.py  builtins.py
tests/: __init__.py  test_advanced_schemas.py  test_boamps.py  test_builtin_templates.py  test_callbacks.py  test_confidence.py  test_config.py  test_evaluation.py  test_exception_handling.py  test_extractor.py  test_prompt_builder.py  test_prompt_engineering.py  test_quality_metrics.py  test_results.py  test_templates.py
