[project]
name = "structured-extractor"
version = "0.1.0"
description = "A LLM-driven structured data extractor for document parsing"
readme = "README.md"
authors = [
    { name = "Leo Baque", email = "leokeba@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "seeds-clients @ git+https://github.com/leokeba/seeds-clients.git",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["UP046"]  # Allow Generic[T] syntax for Pydantic compatibility

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
